--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://enemy_group.tscn", "res://battle_scene.tscn", "res://player_group.tscn", "res://character.tscn")
-current_scene="res://enemy_group.tscn"
+current_scene="res://battle_scene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://character.gd", "res://enemy_group.gd", "res://player_group.gd"]
-selected_script="res://enemy_group.gd"
+selected_script="res://character.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
