--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -29,3 +29,7 @@ ProgressBar:scale=true
 
 create_new_node=Rect2(510, 190, 900, 700)
 project_settings=Rect2(510, 190, 900, 700)
+
+[color_picker]
+
+recent_presets=PackedColorArray(0.602904, 0, 0.243858, 1, 1, 1, 1, 1, 30, 0, 0.243, 1, 30, 30, 0.243, 1, 30, 30, 30, 1, 0, 0, 0, 1, 0, 0, 0, 0.301961, 1, 1, 1, 0.301961, 1, 1, 1, 0)
